# Complete-Striped-Smith-Waterman-Library

./: .clang-format  .gitignore  .pre-commit-config.yaml  Makefile  README.md  all_includes.hpp  benchmark.py  build.py  example.py  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
bindings/: _cpp.cpp  mssw.cpp  mssw.modules  mssw.sources  ssw_cpp20.cpp
demo/: 100k.fa  1M.fa  1k.fa  old.txt  pRead.fa  pRef.fa  query2.fa  target2.fa
src/: example.c  example.cpp  kseq.h  main.c  pyssw.py  sse2neon.h  ssw.c  ssw.h  ssw_cpp.h  ssw_cpp20.cpp  ssw_lib.py  sswjni.c
src/mssw/: __init__.py
src/mssw/src/: example.c  pyssw.py  sse2neon.h  ssw_cpp.cpp  ssw_cpp20.cpp  sswjni.c
src/mssw/src/ssw/: Aligner.java  Alignment.java
src/ssw/: Aligner.java  Alignment.java  Example.java
tests/: test_aligner.py  test_bench.py
utils/: build_pyi.py  generate_headers.py
