[tool.poetry]
name = "mssw"
version = "0.1.0"
description = "Modern Cpp binding for complete-striped-smith-watern-library"
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
license = "MIT"
readme = "README.md"
packages = [{ "include" = "mssw" }]

[tool.poetry.dependencies]
python = "^3.9"
pybind11 = "^2.10.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pre-commit-hooks = "^4.3.0"


[tool.poetry.build]
script = "build.py"


[build-system]
requires = ["poetry-core", "pybind11>2.9.1"]
build-backend = "poetry.core.masonry.api"
